fixed minor alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -698,7 +698,6 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%;
   height: 900px;
   padding: 30px;
-  position: relative;
 }
 
 #img-for-mobile {
